--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-status-bar": "~1.0.2",
     "expo-updates": "^0.3.5",
     "expo-web-browser": "^8.5.0",
+    "intl": "^1.2.5",
     "lottie-react-native": "~2.6.1",
     "moment": "^2.29.1",
     "react": "16.13.1",
