--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native": "~0.63.3",
     "react-native-collapsible": "^1.5.3",
     "react-native-easy-toast": "^1.2.0",
-    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-elements": "1.2.7",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "^0.27.1",
@@ -47,7 +47,7 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
-    "react-native-skeleton-content": "^1.0.20",
+    "react-native-skeleton-content": "1.0.13",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.15.2",
